--- a/index.html
+++ b/index.html
@@ -15,52 +15,93 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <!--Font awesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css"> <!-- poner ./ para linkear -->
-<!-- CSS siempre al final del head-->
+    <!-- CSS siempre al final del head-->
 </head>
 
 <body>
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <img src="./assets/ass/disney.png" alt="">
+            <a href="./index.html"><img src="./assets/ass/disney.png" alt=""></a>
+            <!--Nav de bootstrap-->
         </div>
-        <nav>
-            <ul class="navegacion">
-                <!--ul>li*5<a asi creo mi barra de navegacion -->
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/mejoresatracciones.html">Mejores atracciones</a></li>
-                <li><a href="./pages/historiayfundacion.html">Historia y fundación</a></li>
-                <li><a href="./pages/losparquesalolargodelmundo.html">Los parques a lo largo del mundo</a></li>
-                <li><a href="./pages/shop.html">Shop</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Walt Disney World</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/historiayfundacion.html">Historia y fundación</a>
+                        </li>
+                        <li class="nav-item dropdown active">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Los mejores parques a lo largo del mundo
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./pages/losparquesalolargodelmundo.html">America</a>
+                                </li>
+                                <li><a class="dropdown-item" href="./pages/losparquesalolargodelmundo.html">Europa</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="#">Asia</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/mejoresatracciones.html">Mejores atracciones</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/shop.html">Shop</a>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
-        <h1>Walt Disney World</h1>
-        <!--unico h1 por cada html-->
-        <section class="imagen_principal"> 
-<img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
+
+
+        <section class="imagen_principal">
+            <img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
         </section>
     </main>
     <footer>
         <div>
             <p>Todos los derechos reservados</p>
         </div>
-<ul class="redes_sociales">
-    <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a></li>
-    <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a></li>
-    <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-twitter"></i></a></li>
-    <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a></li>
-    
-</ul>
+        <ul class="redes_sociales">
+            <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-whatsapp"></i></a></li>
+
+        </ul>
     </footer>
-<!--CDN Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-crossorigin="anonymous"></script>
+    <!--CDN Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
 
