grid en html y css

--- a/pages/mejoresatracciones.html
+++ b/pages/mejoresatracciones.html
@@ -73,6 +73,13 @@
                 </div>
             </div>
         </nav>
+        <!--Grilla con grid-->
+        <section class="grid">
+            <div>Mont Everest, Animal Kingdom, Orlando</div>
+            <div>Tower of terror, Hollywood Studios, Orlando</div>
+            <div>Big Thunder Mountain Railroad, Magic Kingdom, Orlando</div>
+            <div>Splash Mountain, Tokyo Disneyland</div>
+        </section>
     </header>
     <main>
 
