--- a/pages/mejoresatracciones.html
+++ b/pages/mejoresatracciones.html
@@ -73,6 +73,7 @@
                 </div>
             </div>
         </nav>
+        <h1>Mejores atracciones</h1>
         <!--Grilla con grid-->
         <section class="grid">
             <div>Mont Everest, Animal Kingdom, Orlando</div>
