agregue a asia como los otros

--- a/pages/losparquesalolargodelmundo.html
+++ b/pages/losparquesalolargodelmundo.html
@@ -56,10 +56,8 @@
                                 </li>
                                 <li><a class="dropdown-item" href="../pages/losparquesalolargodelmundo.html">Europa</a>
                                 </li>
-                                <li>
-                                    <hr class="dropdown-divider">
+                                <li><a class="dropdown-item" href="../pages/losparquesalolargodelmundo.html">Asia</a>
                                 </li>
-                                <li><a class="dropdown-item" href="../pages/losparquesalolargodelmundo.html">Asia</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
