algunas  correcciones pre entrega 2

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/historiayfundacion.html">Historia y fundación</a>
                         </li>
@@ -77,11 +75,37 @@
     </header>
     <main>
 
-
+        <!--Grid system-->
         <section class="imagen_principal">
-            <img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
+            <div class="row">
+                <!--columnas/ cantidad de columnas a cubrir/ breakpoints responsive-->
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <div class="container">
+                    <p> El Walt Disney World Resort, también conocido como Disney World, es un complejo turístico famoso
+                        por sus parques temáticos y numerosos hoteles. El complejo es operado por Walt Disney Parks,
+                        Experiences and Products y propiedad de The Walt Disney Company.
+                        Además de los cuatro parques temáticos principales, el complejo cuenta con dos parques
+                        acuáticos, seis circuitos de golf, un complejo deportivo, dos centros comerciales, veinticuatro
+                        hoteles de Disney, numerosas tiendas, y restaurantes. El área total de la propiedad tiene 12.000
+                        hectáreas (como la ciudad de San Francisco) y es el complejo de parques temáticos más grande del
+                        mundo, a pesar de que en la última década se han vendido grandes extensiones de terreno para
+                        conjuntos residenciales y otros proyectos, incluyendo el terreno ahora ocupado por la ciudad de
+                        Celebration, construida y administrada por Disney.
+                    </p>
+                </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-8">
+                    <div class="container">
+                    <img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
+                </div>
+                </div>
+            </div>
         </section>
     </main>
+
+
+
+
     <footer>
         <div>
             <p>Todos los derechos reservados</p>
