--- a/pages/mejoresatracciones.html
+++ b/pages/mejoresatracciones.html
@@ -27,7 +27,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <img src="./assets/ass/disney.png" alt="">
+            <a href="../index.html"><img src="../assets/ass/disney.png" alt=""></a>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -39,9 +39,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="../pages/historiayfundacion.html">Historia y fundación</a>
                         </li>
@@ -88,8 +86,20 @@
 
     </main>
     <footer>
+        <div>
+            <p>Todos los derechos reservados</p>
+        </div>
+        <ul class="redes_sociales">
+            <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
+                        class="fa-brands fa-whatsapp"></i></a></li>
 
-
+        </ul>
     </footer>
     <!--CDN Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
