--- a/index.html
+++ b/index.html
@@ -81,23 +81,28 @@
                 <!--columnas/ cantidad de columnas a cubrir/ breakpoints responsive-->
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="container">
-                    <p> El Walt Disney World Resort, también conocido como Disney World, es un complejo turístico famoso
-                        por sus parques temáticos y numerosos hoteles. El complejo es operado por Walt Disney Parks,
-                        Experiences and Products y propiedad de The Walt Disney Company.
-                        Además de los cuatro parques temáticos principales, el complejo cuenta con dos parques
-                        acuáticos, seis circuitos de golf, un complejo deportivo, dos centros comerciales, veinticuatro
-                        hoteles de Disney, numerosas tiendas, y restaurantes. El área total de la propiedad tiene 12.000
-                        hectáreas (como la ciudad de San Francisco) y es el complejo de parques temáticos más grande del
-                        mundo, a pesar de que en la última década se han vendido grandes extensiones de terreno para
-                        conjuntos residenciales y otros proyectos, incluyendo el terreno ahora ocupado por la ciudad de
-                        Celebration, construida y administrada por Disney.
-                    </p>
-                </div>
+                        <p> El Walt Disney World Resort, también conocido como Disney World, es un complejo turístico
+                            famoso
+                            por sus parques temáticos y numerosos hoteles. El complejo es operado por Walt Disney Parks,
+                            Experiences and Products y propiedad de The Walt Disney Company.
+                            Además de los cuatro parques temáticos principales, el complejo cuenta con dos parques
+                            acuáticos, seis circuitos de golf, un complejo deportivo, dos centros comerciales,
+                            veinticuatro
+                            hoteles de Disney, numerosas tiendas, y restaurantes. El área total de la propiedad tiene
+                            12.000
+                            hectáreas (como la ciudad de San Francisco) y es el complejo de parques temáticos más grande
+                            del
+                            mundo, a pesar de que en la última década se han vendido grandes extensiones de terreno para
+                            conjuntos residenciales y otros proyectos, incluyendo el terreno ahora ocupado por la ciudad
+                            de
+                            Celebration, construida y administrada por Disney.
+                        </p>
+                    </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-8">
                     <div class="container">
-                    <img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
-                </div>
+                        <img src="./assets/ass/fondodisney.jpg" alt="castillo Disney">
+                    </div>
                 </div>
             </div>
         </section>
@@ -107,9 +112,12 @@
 
 
     <footer>
-        <div>
+        <div class>
+
             <p>Todos los derechos reservados</p>
         </div>
+
+
         <ul class="redes_sociales">
             <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-facebook"></i></a></li>
@@ -119,8 +127,9 @@
                         class="fa-brands fa-twitter"></i></a></li>
             <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
                         class="fa-brands fa-whatsapp"></i></a></li>
-
         </ul>
+
+
     </footer>
     <!--CDN Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
