hice responsive el footer

--- a/pages/mejoresatracciones.html
+++ b/pages/mejoresatracciones.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </nav>
-        
+
         <h1>Mejores atracciones</h1>
         <!--Grilla con grid-->
         <section class="grid">
@@ -87,20 +87,29 @@
 
     </main>
     <footer>
-        <div>
-            <p>Todos los derechos reservados</p>
-        </div>
-        <ul class="redes_sociales">
-            <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-whatsapp"></i></a></li>
+        <!--grid system para hacer responsive el footer-->
+        <section class="container">
+            <div class="row">
+                <div class="col-10">
+                    <p>Todos los derechos reservados</p>
+                </div>
 
-        </ul>
+
+                <div class="col-2">
+                    <ul class="redes_sociales">
+                        <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
     </footer>
     <!--CDN Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
