--- a/index.html
+++ b/index.html
@@ -112,23 +112,28 @@
 
 
     <footer>
-        <div class>
+        <!--grid system para hacer responsive el footer-->
+        <section class="container">
+            <div class="row">
+                <div class="col-10">
+                    <p>Todos los derechos reservados</p>
+                </div>
 
-            <p>Todos los derechos reservados</p>
-        </div>
 
-
-        <ul class="redes_sociales">
-            <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-twitter"></i></a></li>
-            <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
-                        class="fa-brands fa-whatsapp"></i></a></li>
-        </ul>
-
+                <div class="col-2">
+                    <ul class="redes_sociales">
+                        <li><a href="https://www.facebook.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/disney/" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://twitter.com/Disney" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="https://disneylatino.com/" target="_blank" rel="noopener noreferrer"><i
+                                    class="fa-brands fa-whatsapp"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
     </footer>
     <!--CDN Bootstrap-->
