--- a/pages/historiayfundacion.html
+++ b/pages/historiayfundacion.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Historia y fundacion de la compania de Walt Disney">
+    <meta name="keywords"  content="Historia. Comienzos. Ilusiones.">
     <!--CDN CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -28,7 +30,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/ass/disney.png" alt="logo castillo disney"></a>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
