--- a/pages/losparquesalolargodelmundo.html
+++ b/pages/losparquesalolargodelmundo.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Diversos parques alrededor del mundo">
+    <meta name="keywords"  content="Estados Unidos. Europa. Asia">
     <!--CDN CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -27,7 +29,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/ass/disney.png" alt="logo castillo disney"></a>
         </div>
         <!--Navbar bootsrap-->
         <nav class="navbar navbar-expand-lg bg-light">
@@ -74,20 +76,20 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/ass/animalkingdom.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/ass/animalkingdom.jpg" class="d-block w-100" alt="animal kingdom">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="../assets/ass/disneychina.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/ass/disneychina.jpg" class="d-block w-100" alt="Disney China">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/ass/disneyla.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/ass/disneyla.jpg" class="d-block w-100" alt="Disney California">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/ass/disneylandparis.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/ass/disneylandparis.jpg" class="d-block w-100" alt="Disney Paris">
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/ass/epcot.jpg" class="d-block w-100" alt="...">
+                    <img src="../assets/ass/epcot.jpg" class="d-block w-100" alt="Epcot Orlando">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
