--- a/pages/shop.html
+++ b/pages/shop.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="Tienda oficial Disney">
+    <meta name="keywords"  content="Juguetes. Peluches. Juegos. Piezas. Accesorios.">
     <!--CDN CSS Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -27,7 +29,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/ass/disney.png" alt="logo castillo disney"></a>
         </div>
         <!--Navbar Bootsrap-->
         <nav class="navbar navbar-expand-lg bg-light">
@@ -75,7 +77,7 @@
 
         <!--Card Bootsrap carrito de compras-->
         <div class="card" style="width: 18rem;">
-            <img src="../assets/ass/peluche1.jpg" class="card-img-top" alt="...">
+            <img src="../assets/ass/peluche1.jpg" class="card-img-top" alt="Peluche de Winnie The poo">
             <div class="card-body">
                 <h5 class="card-title">Peluche Disney</h5>
                 <p class="card-text">Tienda oficial. 25 USD.</p>
@@ -83,14 +85,14 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="../assets/ass/mickeyporcelana.jpg" class="card-img-top" alt="...">
+            <img src="../assets/ass/mickeyporcelana.jpg" class="card-img-top" alt="Mickey de porcelana">
             <div class="card-body">
                 <h5 class="card-title">Mickey porcelana</h5>
                 <p class="card-text">Tienda oficial. Limitado. 45 USD</p>
                 <a href="#" class="btn btn-primary">Agregar al carrito!</a>
             </div>
             <div class="card" style="width: 18rem;">
-                <img src="../assets/ass/globos.jpg" class="card-img-top" alt="...">
+                <img src="../assets/ass/globos.jpg" class="card-img-top" alt="Globos de Mickey y Minnie">
                 <div class="card-body">
                     <h5 class="card-title">Pack 10 globos</h5>
                     <p class="card-text">Globos Mickey & Minnie. Tienda oficial. 12 USD.</p>
