--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Disney World</title>
     <meta name="description"
         content="Esta pagina hace referencia al mundo Disney, sus atracciones, parques y atracciones ofrecidas. A su vez, cuenta con el shop oficial.">
         <meta name="keywords"  content="Disney. Mickey. Walt. Parques. Atracciones. Magia. Diversion">
@@ -31,7 +31,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="./index.html"><img src="./assets/ass/disney.png" alt="logo castillo Disney"></a>
+            <a href="./index.html"><img src="./assets/svg/disneylogo.svg" alt="logo castillo Disney"></a>
             <!--Nav de bootstrap-->
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
