--- a/pages/losparquesalolargodelmundo.html
+++ b/pages/losparquesalolargodelmundo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Los parques a lo largo del mundo</title>
     <meta name="description" content="Diversos parques alrededor del mundo">
     <meta name="keywords"  content="Estados Unidos. Europa. Asia">
     <!--CDN CSS Bootstrap-->
@@ -29,7 +29,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt="logo castillo disney"></a>
+            <a href="../index.html"><img src="../assets/svg/disneylogo.svg" alt="logo castillo disney"></a>
         </div>
         <!--Navbar bootsrap-->
         <nav class="navbar navbar-expand-lg bg-light">
