--- a/pages/mejoresatracciones.html
+++ b/pages/mejoresatracciones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mejores atracciones</title>
     <meta name="description" content="Mejores atracciones y mas famosas de los parques">
     <meta name="keywords"  content="Atracciones. Juegos. Diversion. Fotos. Adrenalina">
     <!--CDN CSS Bootstrap-->
@@ -29,7 +29,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt=""></a>
+            <a href="../index.html"><img src="../assets/svg/disneylogo.svg" alt=""></a>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
