--- a/pages/historiayfundacion.html
+++ b/pages/historiayfundacion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Historia y fundación</title>
     <meta name="description" content="Historia y fundacion de la compania de Walt Disney">
     <meta name="keywords"  content="Historia. Comienzos. Ilusiones.">
     <!--CDN CSS Bootstrap-->
@@ -30,7 +30,7 @@
     <header>
         <div>
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
-            <a href="../index.html"><img src="../assets/ass/disney.png" alt="logo castillo disney"></a>
+            <a href="../index.html"><img src="../assets/svg/disneylogo.svg" alt="logo castillo disney"></a>
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
