--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css"> <!-- poner ./ para linkear -->
+    <!--SASS-->
+    <link rel="stylesheet" href="./css/main.scss">
     <!-- CSS siempre al final del head-->
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="logo">
             <!-- le pongo etiqueta <a href=""> </a> para cliclear la imagen y me lleve a otro lado-->
             <a href="./index.html"><img src="./assets/svg/disneylogo.svg" alt="logo castillo Disney"></a>
+            </div>
+            
             <!--Nav de bootstrap-->
         </div>
         <nav class="navbar navbar-expand-lg bg-light">
